Fixed tooltip layout issue after click (#335)

--- a/less/plugins/tooltip.less
+++ b/less/plugins/tooltip.less
@@ -5,7 +5,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        max-width: 500px;
+        max-width: none;
         z-index: 900;
 
         display: flex;
